<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/B_Documentacion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_CD"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="82dp"
        android:layout_marginLeft="82dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="47dp"
        android:layout_marginRight="47dp"
        android:layout_toEndOf="@+id/B_Mostrar"
        android:layout_toRightOf="@+id/B_Mostrar"
        android:onClick="saltodoc"
        android:text="@string/documentacion" />

    <Button
        android:id="@+id/B_Mostrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_CD"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="46dp"
        android:layout_marginLeft="46dp"
        android:layout_marginTop="55dp"
        android:onClick="calcular"
        android:text="@string/mostrar" />

    <TextView
        android:id="@+id/TV_CD"
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/S_Divisa"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="58dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:gravity="center"
        android:text="@string/cantidaddeladivisa"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/S_Divisa"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:layout_below="@+id/ET_CantidadEuros"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/ssppiinneerr" />

    <EditText
        android:id="@+id/ET_CantidadEuros"
        android:layout_width="365dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_CE"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/introduzcalacantidad"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:autofillHints="" />

    <TextView
        android:id="@+id/TV_CE"
        android:layout_width="205dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="104dp"
        android:layout_marginLeft="104dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="102dp"
        android:layout_marginRight="102dp"
        android:gravity="center"
        android:text="@string/cantidadeneuros"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginBottom="31dp"
        android:text="@string/hechoporcristianramirez"
        android:textSize="16sp" />

</RelativeLayout>