<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/B_RPI"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="166dp"
        android:layout_marginRight="166dp"
        android:layout_toStartOf="@+id/B_KFR"
        android:layout_toLeftOf="@+id/B_KFR"
        android:onClick="loadRPI"
        android:text="@string/rpi"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/B_BBD"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/B_BBD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B_AGW"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:onClick="loadBBD"
        android:text="@string/bbd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/B_AGW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B_AMG"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:onClick="loadAGW"
        android:text="@string/agw"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/B_TAU"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_RPI" />

    <Button
        android:id="@+id/B_TAU"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B_PKD"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="164dp"
        android:layout_marginRight="164dp"
        android:layout_toStartOf="@+id/B_BBD"
        android:layout_toLeftOf="@+id/B_BBD"
        android:onClick="loadTAU"
        android:text="@string/tau"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_BBD" />

    <Button
        android:id="@+id/B_BTC"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B_RPI"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="144dp"
        android:layout_marginRight="144dp"
        android:layout_toStartOf="@+id/B_AMG"
        android:layout_toLeftOf="@+id/B_AMG"
        android:onClick="loadBTC"
        android:text="@string/btc"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/B_PKD"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_AGW" />

    <Button
        android:id="@+id/B_PKD"
        android:layout_width="107dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B_BTC"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="37dp"
        android:layout_marginLeft="37dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="146dp"
        android:layout_marginRight="146dp"
        android:layout_toStartOf="@+id/B_AGW"
        android:layout_toLeftOf="@+id/B_AGW"
        android:onClick="loadPKD"
        android:text="@string/pkd"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_TAU" />

    <Button
        android:id="@+id/B_AMG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B_KFR"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="35dp"
        android:layout_marginRight="35dp"
        android:onClick="loadAMG"
        android:text="@string/amg"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/B_KFR"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_BTC" />

    <Button
        android:id="@+id/B_KFR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="33dp"
        android:layout_marginRight="33dp"
        android:onClick="loadKFR"
        android:text="@string/kfr"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/B_PKD" />

    <Button
        android:id="@+id/B_Volver"
        android:layout_width="114dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/B_BBD"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:layout_marginEnd="153dp"
        android:layout_marginRight="153dp"
        android:onClick="volverinicio"
        android:text="@string/inicio"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>